Commit TUSCANY-216
git-svn-id: https://svn.apache.org/repos/asf/incubator/tuscany/java/sdo@396664 13f79535-47bb-0310-9956-ffa450edef68